--- a/template-parts/_content.scss
+++ b/template-parts/_content.scss
@@ -59,6 +59,8 @@
   border-radius: 2px;
   padding: 0 7px 3px 7px;
   margin-left: 3px;
+  margin-bottom: 6px;
+  display: inline-block;
 }
 
 .content__title {
